      \code{vsnprintf} respectively. [\bold{NB:} whether such calls get
      compiled into the package is platform-dependent.]

      \item Where recorded at installation, \command{R CMD check}
      reports the C and Fortran compilers used to build \R.

      It reports the OS in use (if known, as given by
      \code{osVersion}) as well as that \R was built for.

      \item \command{R CMD INSTALL} reports the compilers (and on
      macOS, the SDK) used, and this is copied to the output of
      \command{R CMD check}.

      Where C++ is compiled, the standard used is reported.
    }
  }

  \subsection{DEPRECATED AND DEFUNCT}{
    \itemize{
      \item \code{default.stringsAsFactors()} is defunct.

      \item Calling \code{as.data.frame.<class>()} directly (for 12 atomic
      classes) is going to be formally deprecated, currently activated by
      setting the environment variable
      \env{_R_CHECK_AS_DATA_FRAME_EXPLICIT_METHOD_} to non-empty, which
      also happens in \command{R CMD check --as-cran}.
    }
  }

  \subsection{BUG FIXES}{
    \itemize{
      \item Hashed \code{environment}s with sizes less than 5 can now grow.
      (Reported to R-devel by Duncan Garmonsway.)

      \item \code{as.character(<Rd>, deparse = TRUE)} failed to
      re-escape curly braces in LaTeX-like text.
      (Reported by Hadley Wickham in \PR{18324}.)

      \item \code{library()} now passes its \code{lib.loc} argument when
      requiring \code{Depends} packages; reported (with fix) in \PR{18331}
      by Mikael Jagan.

      \item \command{R CMD Stangle}: improved message about \sQuote{Output}
      files.

      \item \code{head(x, n)} and \code{tail(x, n)} now signal an error if
      \code{n} is not numeric, instead of incidentally \dQuote{working}
      sometimes returning all of \code{x}.  Reported and discussed by Colin
      Fay, in \PR{18357}.

      \item The \code{"lm"} method for \code{summary()} now gives the